WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29346
Transformed elements inside position:fixed container are clipped incorrectly
https://bugs.webkit.org/show_bug.cgi?id=29346
Summary
Transformed elements inside position:fixed container are clipped incorrectly
Simon Fraser (smfr)
Reported
2009-09-17 14:24:54 PDT
Created
attachment 39723
[details]
Testcase The attached testcase shows a bug where transformed elements inside a position:fixed container are incorrectly clipped.
Attachments
Testcase
(1.12 KB, text/html)
2009-09-17 14:24 PDT
,
Simon Fraser (smfr)
no flags
Details
Better testcase
(1.24 KB, text/html)
2009-09-17 14:39 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch, changelog, testcase
(9.28 KB, patch)
2009-09-17 16:13 PDT
,
Simon Fraser (smfr)
hyatt
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-09-17 14:36:16 PDT
***
Bug 29261
has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 2
2009-09-17 14:39:35 PDT
Created
attachment 39727
[details]
Better testcase
Simon Fraser (smfr)
Comment 3
2009-09-17 16:13:18 PDT
Created
attachment 39733
[details]
Patch, changelog, testcase
Dave Hyatt
Comment 4
2009-09-18 09:58:58 PDT
Comment on
attachment 39733
[details]
Patch, changelog, testcase r=me
Simon Fraser (smfr)
Comment 5
2009-09-18 13:16:11 PDT
http://trac.webkit.org/changeset/48524
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug